--- a/packages/rocketact/template/src/pages/App.html
+++ b/packages/rocketact/template/src/pages/App.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Hello Rocketact</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.png"/>
     <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,viewport-fit=cover">
   </head>
