docs: update website

--- a/docusaurus/website/static/css/custom.css
+++ b/docusaurus/website/static/css/custom.css
@@ -18,3 +18,11 @@
 a[title=站长统计] {
   display: none
 }
+
+.mainContainer a {
+  text-decoration: underline
+}
+
+.mainContainer a:hover {
+  text-decoration: none
+}
